exercises/07_capstone/00_overview/tests/fail/unknown_target.stderr
error: unknown state `Purple`; not a variant of this enum
 --> tests/fail/unknown_target.rs:8:18
  |
8 |     #[transition(Purple)]
  |                  ^^^^^^
